Started moving away from ItemStackJS, added ItemStackSet